--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -70,7 +70,7 @@
         "login": "login",
         "alreadyaccount": "Already have an Account.",
         "createnewuser": "Register new account.",
-        "reg_title": "Register As Farmer",
+        "reg_title": "Register New Account",
         "log_loading": "loging in please wait...",
         "reg_loading": "registering please wait..."
     },
